--- a/style.css
+++ b/style.css
@@ -48,6 +48,17 @@ img{
 
 }
 
+.frame{
+    background: #fff;
+    width: 85%;
+    height: auto;
+    border-radius: 70px;
+    margin: 20px auto 60px;
+    padding: 40px 20px;  
+    box-shadow: 0 10px 30px #897cda;
+
+}
+
 .container{
     max-width: 1200px;
     width: 90%;
@@ -142,7 +153,7 @@ header nav ul li.btn a:hover{
 .tutors{
     font-family: 'Raleway', sans-serif;
     text-align: center;
-    padding-bottom: 100px;
+    padding-bottom: 20px;
 }
 
 .tutors-slider{
@@ -153,30 +164,35 @@ header nav ul li.btn a:hover{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 60px; 
+    box-sizing: border-box;
 }
 
 .grid-tutors{
     display: flex;
     justify-content: flex-start;
+    align-items: stretch;
     overflow-x: hidden;
     scroll-behavior: smooth;
     gap:30px;
-    margin: 0 auto;
+    margin: 0;
     padding: 40px 10px;
+    width: 100%;
+    box-sizing: border-box;
     scrollbar-width: none;
 }
 
 .tutor-card {
-    min-width: calc((100% - (2 * 30px)) / 3); 
-    max-width: calc((100% - (2 * 30px)) / 3);
+    width: calc((100% - 60px) / 3); 
+    min-width: calc((100% - 60px) / 3); 
     flex-shrink: 0;
     background: #fff;
     border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.09);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .tutor-card:hover {
@@ -209,6 +225,28 @@ header nav ul li.btn a:hover{
     color: #a29bfe;
 }
 
+.tutor-rating {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-bottom: 5px;
+}
+
+.stars-active {
+    color: #ffca28;
+}
+
+.stars-non_active {
+    color: #e0e0e0;;
+}
+
+.rating-num {
+    font-weight: 500;
+    margin-left: 5px;
+    color: #2d3436;
+}
+
 .btn--subjects{
     display: flex;
     justify-content: center;
@@ -225,6 +263,10 @@ header nav ul li.btn a:hover{
     background-color: transparent;
     border-radius: 30px;
     transition: all 500ms ease;    
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 80px;
 }
 
 .btn--subjects .btn:hover{
@@ -276,14 +318,38 @@ header nav ul li.btn a:hover{
 }
 
 .prev {
-    left: -25px;
+    left: 0;
 }
 
 .next {
-    right: -25px;
+    right: 0;
 }
 
 .slider-btn:hover {
     background: #9586f7;
     transform: translateY(-50%) scale(1.1);
+}
+
+/* footer */
+footer {
+    padding: 40px 0;
+    border-top: 1px solid rgba(149, 134, 247, 0.2);
+    margin-top: 40px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-content p {
+    font-size: 14px;
+    color: #636e72;
+}
+
+.socials a {
+    margin-left: 20px;
+    color: #9586f7;
+    font-weight: bold;
 }
