--- a/style.css
+++ b/style.css
@@ -39,23 +39,31 @@
         scroll-snap-align: center;
         box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
-
+    
     .slider-btn {
         width: 35px;
         height: 35px;
         font-size: 14px;
     }
-    
     .prev { left: 5px; }
     .next { right: 5px; }
 }
+
 
 *{
     margin: 0;
     padding: 0;
 }
 
+
+html,body{
+    height: 100%;
+    margin: 0;
+}
+
 body{
+    display: flex;
+    flex-direction: column;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     color: #000000;
@@ -74,11 +82,12 @@ img{
 .wrapper{
     background: linear-gradient(320deg,rgba(204, 177, 204, 1) 0%, rgba(222, 209, 224, 1) 67%, rgba(255, 255, 255, 1) 93%);
     width: 100%;
+    flex: 1 0 auto;
 
 }
 
 .frame{
-    background: #fff;
+    background: #edebfd;
     width: 85%;
     height: auto;
     border-radius: 70px;
@@ -230,9 +239,10 @@ header nav ul li.btn a:hover{
 }
 
 .tutor-img img {
-    width: 100%;
-    height: 200px;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
+    object-position: center 20%;;
 }
 
 .tutor-info {
@@ -361,6 +371,7 @@ header nav ul li.btn a:hover{
 
 /* footer */
 footer {
+    flex-shrink: 0;
     padding: 40px 0;
     border-top: 1px solid rgba(149, 134, 247, 0.2);
     margin-top: 40px;
